# devenv_container

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_image.bat  build_image.sh  code-server.bat  entrypoint.sh  interactive.bat  interactive.sh  nvim.bat  nvim.sh  run.bat  run.sh  run_podman.sh  start_nvim.bat
.code-server/: entrypoint.sh  launch_code-server.sh  settings.json
.code_server/: launch_code-server.sh
.docker/: image_name  interface.bat  interface.ps1  interface.sh
.github/workflows/: deploy-cuda.yaml  deploy-test.yaml  deploy.yaml
.nvim/: entrypoint.sh  init.lua  launch_nvim.sh
.nvim/nvim/: init.lua
.nvim/nvim/lua/config/: dap-config.lua
.nvim/nvim/lua/plugins/: catppuccin.lua  dap.lua  lspconfig.lua  mason-lspconfig.lua  mason.lua  nvim-cmp.lua  nvim-tree.lua  telescope.lua  toggleterm.lua  treesitter.lua
.podman/: image_name  interface.ps1  interface.sh
.term/: entrypoint.sh
